# AstronomicalAnnualCalendar

./: .pre-commit-config.yaml  README-de.md  README.md  pyproject.toml
AstronomicalAnnualCalendar/: __main__.py  cli.py  enums.py  errors.py  models.py  parser.py  regex.py  utils.py
tests/: conftest.py  constants.py  test_models.py  test_parser.py  test_regex.py  test_utils.py
tests/sample_data/: complete-10d.txt  mercury-10d.txt  neptune-10d.txt  neptune-1d.txt  sun,moon,mercury-10d-everything.txt  sun-10d.txt
